RESOLVED FIXED302925
[WTF] Fix behavioral issues in searching in spans
https://bugs.webkit.org/show_bug.cgi?id=302925
Summary [WTF] Fix behavioral issues in searching in spans
Xabier Rodríguez Calvar
Reported 2025-11-21 01:35:04 PST
.
Attachments
Xabier Rodríguez Calvar
Comment 1 2025-11-21 04:24:24 PST
Radar WebKit Bug Importer
Comment 2 2025-11-28 01:36:10 PST
EWS
Comment 3 2025-12-04 22:37:23 PST
Committed 303965@main (647785e34521): <https://commits.webkit.org/303965@main> Reviewed commits have been landed. Closing PR #54312 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.